--- a/pykd/packages.config
+++ b/pykd/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="boost" version="1.57.0.0" targetFramework="Native" />
-  <package id="boost_chrono" version="1.57.0.0" targetFramework="Native" />
-  <package id="boost_date_time" version="1.57.0.0" targetFramework="Native" />
-  <package id="boost_python" version="1.57.0.0" targetFramework="Native" />
-  <package id="boost_system" version="1.57.0.0" targetFramework="Native" />
-  <package id="boost_thread" version="1.57.0.0" targetFramework="Native" />
+  <package id="boost" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_atomic-src" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_chrono-src" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_date_time-src" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_regex-src" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_system-src" version="1.67.0.0" targetFramework="native" />
+  <package id="boost_thread-src" version="1.67.0.0" targetFramework="native" />
   <package id="Python27" version="2.7.6" targetFramework="Native" />
   <package id="Python35" version="3.5.1.1" targetFramework="Native" />
   <package id="Python36" version="3.6.0" targetFramework="Native" />
