--- a/pykd/packages.config
+++ b/pykd/packages.config
@@ -10,6 +10,7 @@
   <package id="Python27" version="2.7.6" targetFramework="Native" />
   <package id="Python35" version="3.5.1.1" targetFramework="Native" />
   <package id="Python36" version="3.6.0" targetFramework="Native" />
+  <package id="Python37" version="1.0.0.1" targetFramework="Native" />
   <package id="clang-cmake" version="6.0.0.1" targetFramework="Native" />
   <package id="llvm-cmake" version="6.0.0.1" targetFramework="Native" />
 </packages>
